src/gen/T6TriggerParser.js
/* eslint-disable */
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import T6TriggerVisitor from './T6TriggerVisitor.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.PredictionContextCache();

export default class T6TriggerParser extends antlr4.Parser {
  static grammarFileName = 'java-escape';
  static literalNames = [
    null,
    "'\\u0024'",
    "'-'",
    "'/'",
    "'\\u00B0'",
    "'\\u002B'",
    "'\\u0025'",
    "'\\u0026'",
    "'.'",
    "'$IF'",
    "'$FROM'",
    "'$THEN'",
    "'$ANY'",
    "'$EMPTY'",
    "'$NOT'",
    "'$COMPLEX'",
    "'$COUNT'",
    "'$COUNT_COMPLEX'",
    "'$DISTINCT'",
    "'impactSides'",
    "'$AND'",
    "'$OR'",
    "'>'",
    "'>='",
    "'<'",
    "'<='",
    "'='",
    "'('",
    "')'",
  ];
  static symbolicNames = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    'IF',
    'FROM',
    'THEN',
    'ANY',
    'EMPTY',
    'NOT',
    'COMPLEX',
    'COUNT',
    'COUNT_COMPLEX',
    'DISTINCT',
    'IMPACT_SIDES',
    'AND',
    'OR',
    'GT',
    'GE',
    'LT',
    'LE',
    'EQ',
    'LPAREN',
    'RPAREN',
    'SEPARATOR',
    'INT',
    'DECIMAL',
    'DATE_TIME',
    'IDENTIFIER',
    'WS',
  ];
  static ruleNames = [
    'parse',
    'expr',
    'dateTime',
    'vehicleImpact',
    'number',
    'numbers',
    'field',
    'op',
    'comparator',
    'binary',
    'not',
    'complex',
    'count',
    'countComplex',
    'value',
    'values',
  ];

  constructor(input) {
    super(input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = T6TriggerParser.ruleNames;
    this.literalNames = T6TriggerParser.literalNames;
    this.symbolicNames = T6TriggerParser.symbolicNames;
  }

  get atn() {
    return atn;
  }

  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 1:
        return this.expr_sempred(localctx, predIndex);
      default:
        throw 'No predicate with index:' + ruleIndex;
    }
  }

  expr_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 14);
      default:
        throw 'No predicate with index:' + predIndex;
    }
  }

  parse() {
    let localctx = new ParseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, T6TriggerParser.RULE_parse);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 32;
      this.expr(0);
      this.state = 33;
      this.match(T6TriggerParser.EOF);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  expr(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new ExprContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 2;
    this.enterRecursionRule(localctx, 2, T6TriggerParser.RULE_expr, _p);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 112;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 0, this._ctx);
      switch (la_) {
        case 1:
          localctx = new ComparatorExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;

          this.state = 36;
          this.match(T6TriggerParser.IF);
          this.state = 37;
          this.comparator();
          this.state = 38;
          this.match(T6TriggerParser.FROM);
          this.state = 39;
          this.field();
          this.state = 40;
          this.match(T6TriggerParser.THEN);
          break;

        case 2:
          localctx = new AnyExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 42;
          this.match(T6TriggerParser.IF);
          this.state = 43;
          this.match(T6TriggerParser.ANY);
          this.state = 44;
          this.match(T6TriggerParser.FROM);
          this.state = 45;
          this.field();
          this.state = 46;
          this.match(T6TriggerParser.THEN);
          break;

        case 3:
          localctx = new EmptyExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 48;
          this.match(T6TriggerParser.IF);
          this.state = 49;
          this.match(T6TriggerParser.EMPTY);
          this.state = 50;
          this.match(T6TriggerParser.FROM);
          this.state = 51;
          this.field();
          this.state = 52;
          this.match(T6TriggerParser.THEN);
          break;

        case 4:
          localctx = new NumberExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 54;
          this.match(T6TriggerParser.IF);
          this.state = 55;
          this.number();
          this.state = 56;
          this.match(T6TriggerParser.FROM);
          this.state = 57;
          this.field();
          this.state = 58;
          this.match(T6TriggerParser.THEN);
          break;

        case 5:
          localctx = new NumbersExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 60;
          this.match(T6TriggerParser.IF);
          this.state = 61;
          this.numbers();
          this.state = 62;
          this.match(T6TriggerParser.FROM);
          this.state = 63;
          this.field();
          this.state = 64;
          this.match(T6TriggerParser.THEN);
          break;

        case 6:
          localctx = new NotExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 66;
          this.match(T6TriggerParser.IF);
          this.state = 67;
          this.not();
          this.state = 68;
          this.match(T6TriggerParser.FROM);
          this.state = 69;
          this.field();
          this.state = 70;
          this.match(T6TriggerParser.THEN);
          break;

        case 7:
          localctx = new ComplexExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 72;
          this.match(T6TriggerParser.IF);
          this.state = 73;
          this.complex();
          this.state = 74;
          this.match(T6TriggerParser.FROM);
          this.state = 75;
          this.field();
          this.state = 76;
          this.match(T6TriggerParser.THEN);
          break;

        case 8:
          localctx = new CountExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 78;
          this.match(T6TriggerParser.IF);
          this.state = 79;
          this.count();
          this.state = 80;
          this.match(T6TriggerParser.FROM);
          this.state = 81;
          this.field();
          this.state = 82;
          this.match(T6TriggerParser.THEN);
          break;

        case 9:
          localctx = new CountComplexExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 84;
          this.match(T6TriggerParser.IF);
          this.state = 85;
          this.countComplex();
          this.state = 86;
          this.match(T6TriggerParser.FROM);
          this.state = 87;
          this.field();
          this.state = 88;
          this.match(T6TriggerParser.THEN);
          break;

        case 10:
          localctx = new ParenExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 90;
          this.match(T6TriggerParser.LPAREN);
          this.state = 91;
          this.expr(0);
          this.state = 92;
          this.match(T6TriggerParser.RPAREN);
          break;

        case 11:
          localctx = new VehicleImpactExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 94;
          this.match(T6TriggerParser.IF);
          this.state = 95;
          this.vehicleImpact();
          this.state = 96;
          this.match(T6TriggerParser.FROM);
          this.state = 97;
          this.field();
          this.state = 98;
          this.match(T6TriggerParser.THEN);
          break;

        case 12:
          localctx = new ValueExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 100;
          this.match(T6TriggerParser.IF);
          this.state = 101;
          this.value();
          this.state = 102;
          this.match(T6TriggerParser.FROM);
          this.state = 103;
          this.field();
          this.state = 104;
          this.match(T6TriggerParser.THEN);
          break;

        case 13:
          localctx = new ValuesExprContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 106;
          this.match(T6TriggerParser.IF);
          this.state = 107;
          this.values();
          this.state = 108;
          this.match(T6TriggerParser.FROM);
          this.state = 109;
          this.field();
          this.state = 110;
          this.match(T6TriggerParser.THEN);
          break;
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 120;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
      while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners !== null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          localctx = new BinaryExprContext(this, new ExprContext(this, _parentctx, _parentState));
          this.pushNewRecursionContext(localctx, _startState, T6TriggerParser.RULE_expr);
          this.state = 114;
          if (!this.precpred(this._ctx, 14)) {
            throw new antlr4.error.FailedPredicateException(this, 'this.precpred(this._ctx, 14)');
          }
          this.state = 115;
          this.binary();
          this.state = 116;
          this.expr(15);
        }
        this.state = 122;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
      }
    } catch (error) {
      if (error instanceof antlr4.error.RecognitionException) {
        localctx.exception = error;
        this._errHandler.reportError(this, error);
        this._errHandler.recover(this, error);
      } else {
        throw error;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }

  dateTime() {
    let localctx = new DateTimeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, T6TriggerParser.RULE_dateTime);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 123;
      this.match(T6TriggerParser.DATE_TIME);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  vehicleImpact() {
    let localctx = new VehicleImpactContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, T6TriggerParser.RULE_vehicleImpact);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 125;
      this.match(T6TriggerParser.IMPACT_SIDES);
      this.state = 126;
      this.match(T6TriggerParser.EQ);
      this.state = 127;
      this.match(T6TriggerParser.INT);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  number() {
    let localctx = new NumberContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, T6TriggerParser.RULE_number);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 129;
      _la = this._input.LA(1);
      if (!(_la === 30 || _la === 31)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  numbers() {
    let localctx = new NumbersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, T6TriggerParser.RULE_numbers);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 131;
      this.number();
      this.state = 136;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
      while (_alt != 1 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1 + 1) {
          this.state = 132;
          this.match(T6TriggerParser.SEPARATOR);
          this.state = 133;
          this.number();
        }
        this.state = 138;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  field() {
    let localctx = new FieldContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, T6TriggerParser.RULE_field);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 139;
      this.match(T6TriggerParser.IDENTIFIER);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  op() {
    let localctx = new OpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, T6TriggerParser.RULE_op);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 141;
      _la = this._input.LA(1);
      if (!((_la & ~0x1f) == 0 && ((1 << _la) & 130023424) !== 0)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  comparator() {
    let localctx = new ComparatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, T6TriggerParser.RULE_comparator);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 143;
      this.op();
      this.state = 146;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 30:
        case 31:
          this.state = 144;
          this.number();
          break;
        case 32:
          this.state = 145;
          this.dateTime();
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  binary() {
    let localctx = new BinaryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, T6TriggerParser.RULE_binary);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 148;
      _la = this._input.LA(1);
      if (!(_la === 20 || _la === 21)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  not() {
    let localctx = new NotContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, T6TriggerParser.RULE_not);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 150;
      this.match(T6TriggerParser.NOT);
      this.state = 151;
      this.match(T6TriggerParser.LPAREN);
      this.state = 154;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 4, this._ctx);
      switch (la_) {
        case 1:
          this.state = 152;
          this.numbers();
          break;

        case 2:
          this.state = 153;
          this.values();
          break;
      }
      this.state = 156;
      this.match(T6TriggerParser.RPAREN);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  complex() {
    let localctx = new ComplexContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, T6TriggerParser.RULE_complex);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 158;
      this.match(T6TriggerParser.COMPLEX);
      this.state = 159;
      this.match(T6TriggerParser.LPAREN);
      this.state = 160;
      this.expr(0);
      this.state = 161;
      this.match(T6TriggerParser.RPAREN);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  count() {
    let localctx = new CountContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, T6TriggerParser.RULE_count);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 163;
      this.match(T6TriggerParser.COUNT);
      this.state = 164;
      this.match(T6TriggerParser.LPAREN);
      this.state = 167;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 18:
          this.state = 165;
          this.match(T6TriggerParser.DISTINCT);
          break;
        case 2:
        case 3:
        case 4:
        case 5:
        case 6:
        case 7:
        case 8:
        case 22:
        case 23:
        case 24:
        case 25:
        case 26:
        case 27:
        case 28:
        case 30:
        case 31:
        case 32:
        case 33:
        case 34:
          this.state = 166;
          this.value();
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
      this.state = 169;
      this.match(T6TriggerParser.RPAREN);
      this.state = 170;
      this.comparator();
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  countComplex() {
    let localctx = new CountComplexContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, T6TriggerParser.RULE_countComplex);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 172;
      this.match(T6TriggerParser.COUNT_COMPLEX);
      this.state = 173;
      this.match(T6TriggerParser.LPAREN);
      this.state = 179;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 9:
        case 27:
          this.state = 174;
          this.expr(0);
          break;
        case 18:
          this.state = 175;
          this.match(T6TriggerParser.DISTINCT);
          this.state = 176;
          this.field();
          this.state = 177;
          this.expr(0);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
      this.state = 181;
      this.match(T6TriggerParser.RPAREN);
      this.state = 182;
      this.comparator();
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  value() {
    let localctx = new ValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 28, T6TriggerParser.RULE_value);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 199;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
      while (_alt != 1 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1 + 1) {
          this.state = 197;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 7, this._ctx);
          switch (la_) {
            case 1:
              this.state = 184;
              _la = this._input.LA(1);
              if (_la <= 0 || ((_la & ~0x1f) == 0 && ((1 << _la) & 541064706) !== 0)) {
                this._errHandler.recoverInline(this);
              } else {
                this._errHandler.reportMatch(this);
                this.consume();
              }
              break;

            case 2:
              this.state = 185;
              this.number();
              break;

            case 3:
              this.state = 186;
              this.op();
              break;

            case 4:
              this.state = 187;
              this.match(T6TriggerParser.IDENTIFIER);
              break;

            case 5:
              this.state = 188;
              this.match(T6TriggerParser.LPAREN);
              break;

            case 6:
              this.state = 189;
              this.match(T6TriggerParser.RPAREN);
              break;

            case 7:
              this.state = 190;
              this.match(T6TriggerParser.T__1);
              break;

            case 8:
              this.state = 191;
              this.match(T6TriggerParser.T__2);
              break;

            case 9:
              this.state = 192;
              this.match(T6TriggerParser.T__3);
              break;

            case 10:
              this.state = 193;
              this.match(T6TriggerParser.T__4);
              break;

            case 11:
              this.state = 194;
              this.match(T6TriggerParser.T__5);
              break;

            case 12:
              this.state = 195;
              this.match(T6TriggerParser.T__6);
              break;

            case 13:
              this.state = 196;
              this.match(T6TriggerParser.T__7);
              break;
          }
        }
        this.state = 201;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  values() {
    let localctx = new ValuesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 30, T6TriggerParser.RULE_values);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 202;
      this.value();
      this.state = 207;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
      while (_alt != 1 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1 + 1) {
          this.state = 203;
          this.match(T6TriggerParser.SEPARATOR);
          this.state = 204;
          this.value();
        }
        this.state = 209;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
}

T6TriggerParser.EOF = antlr4.Token.EOF;
T6TriggerParser.T__0 = 1;
T6TriggerParser.T__1 = 2;
T6TriggerParser.T__2 = 3;
T6TriggerParser.T__3 = 4;
T6TriggerParser.T__4 = 5;
T6TriggerParser.T__5 = 6;
T6TriggerParser.T__6 = 7;
T6TriggerParser.T__7 = 8;
T6TriggerParser.IF = 9;
T6TriggerParser.FROM = 10;
T6TriggerParser.THEN = 11;
T6TriggerParser.ANY = 12;
T6TriggerParser.EMPTY = 13;
T6TriggerParser.NOT = 14;
T6TriggerParser.COMPLEX = 15;
T6TriggerParser.COUNT = 16;
T6TriggerParser.COUNT_COMPLEX = 17;
T6TriggerParser.DISTINCT = 18;
T6TriggerParser.IMPACT_SIDES = 19;
T6TriggerParser.AND = 20;
T6TriggerParser.OR = 21;
T6TriggerParser.GT = 22;
T6TriggerParser.GE = 23;
T6TriggerParser.LT = 24;
T6TriggerParser.LE = 25;
T6TriggerParser.EQ = 26;
T6TriggerParser.LPAREN = 27;
T6TriggerParser.RPAREN = 28;
T6TriggerParser.SEPARATOR = 29;
T6TriggerParser.INT = 30;
T6TriggerParser.DECIMAL = 31;
T6TriggerParser.DATE_TIME = 32;
T6TriggerParser.IDENTIFIER = 33;
T6TriggerParser.WS = 34;

T6TriggerParser.RULE_parse = 0;
T6TriggerParser.RULE_expr = 1;
T6TriggerParser.RULE_dateTime = 2;
T6TriggerParser.RULE_vehicleImpact = 3;
T6TriggerParser.RULE_number = 4;
T6TriggerParser.RULE_numbers = 5;
T6TriggerParser.RULE_field = 6;
T6TriggerParser.RULE_op = 7;
T6TriggerParser.RULE_comparator = 8;
T6TriggerParser.RULE_binary = 9;
T6TriggerParser.RULE_not = 10;
T6TriggerParser.RULE_complex = 11;
T6TriggerParser.RULE_count = 12;
T6TriggerParser.RULE_countComplex = 13;
T6TriggerParser.RULE_value = 14;
T6TriggerParser.RULE_values = 15;

class ParseContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = T6TriggerParser.RULE_parse;
  }

  expr() {
    return this.getTypedRuleContext(ExprContext, 0);
  }

  EOF() {
    return this.getToken(T6TriggerParser.EOF, 0);
  }

  accept(visitor) {
    if (visitor instanceof T6TriggerVisitor) {
      return visitor.visitParse(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class ExprContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = T6TriggerParser.RULE_expr;
  }

  copyFrom(ctx) {
    super.copyFrom(ctx);
  }
}

class NumbersExprContext extends ExprContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  IF() {
    return this.getToken(T6TriggerParser.IF, 0);
  }

  numbers() {
    return this.getTypedRuleContext(NumbersContext, 0);
  }

  FROM() {
    return this.getToken(T6TriggerParser.FROM, 0);
  }

  field() {
    return this.getTypedRuleContext(FieldContext, 0);
  }

  THEN() {
    return this.getToken(T6TriggerParser.THEN, 0);
  }

  accept(visitor) {
    if (visitor instanceof T6TriggerVisitor) {
      return visitor.visitNumbersExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

T6TriggerParser.NumbersExprContext = NumbersExprContext;

class ComparatorExprContext extends ExprContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  IF() {
    return this.getToken(T6TriggerParser.IF, 0);
  }

  comparator() {
    return this.getTypedRuleContext(ComparatorContext, 0);
  }

  FROM() {
    return this.getToken(T6TriggerParser.FROM, 0);
  }

  field() {
    return this.getTypedRuleContext(FieldContext, 0);
  }

  THEN() {
    return this.getToken(T6TriggerParser.THEN, 0);
  }

  accept(visitor) {
    if (visitor instanceof T6TriggerVisitor) {
      return visitor.visitComparatorExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

T6TriggerParser.ComparatorExprContext = ComparatorExprContext;

class ComplexExprContext extends ExprContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  IF() {
    return this.getToken(T6TriggerParser.IF, 0);
  }

  complex() {
    return this.getTypedRuleContext(ComplexContext, 0);
  }

  FROM() {
    return this.getToken(T6TriggerParser.FROM, 0);
  }
